Fix clipped border in read-more

--- a/sass/stylesheet.scss
+++ b/sass/stylesheet.scss
@@ -62,6 +62,7 @@
         font-size: .8em;
         line-height: 1em;
         padding: .8em 1.5em;
+        margin: .2em 0;
         display: inline-block;
       }
 
